--- a/views/partials/pages/header.handlebars
+++ b/views/partials/pages/header.handlebars
@@ -13,12 +13,16 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search for an issue">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+        <form class="navbar-form navbar-left">
+            <button class="btn btn-navbar btn-primary add-project">Add new project</button>
+        </form>
+
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search for an issue">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
