Worked on login functionality

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <body class="{{name}}">
-	{{> pages/header_projects}}
-	{{> pages/projects}}
+	{{> pages/header_standard}}
+	{{> pages/login}}
 	{{> footer}}
 	{{> scripts}}
 </body>
