--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,6 +1,6 @@
 <body class="{{name}}">
-	{{> pages/header_projects}}
-	{{> pages/projects}}
+	{{> pages/header_standard}}
+	{{> pages/register}}
 	{{> footer}}
 	{{> scripts}}
 </body>
