finished login functionality

--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -1,3 +1,9 @@
 <script src="../libs/jquery.min.js"></script>
 <script src="../bootstrap/js/bootstrap.min.js"></script>
 <script src="../compiled/js/app.js"></script>
+
+<script>
+    var resources = new Object();
+
+    resources.username = "{{userName}}";
+</script>
