--- a/views/partials/pages/header_projects.handlebars
+++ b/views/partials/pages/header_projects.handlebars
@@ -17,11 +17,9 @@
             <button class="btn btn-navbar btn-primary add-project">Add new project</button>
         </form>
 
-        <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search for an issue">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+        <form class="navbar-form navbar-right" role="logout">
+            <span class="text-info">Welcome: {{userName}}</span>
+            <a href="/logout" class="btn btn-info" style="margin-left: 15px;">Logout</a>
         </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
