--- a/views/partials/pages/projects.handlebars
+++ b/views/partials/pages/projects.handlebars
@@ -6,10 +6,10 @@
         <h4 class="modal-title">Add New Project</h4>
       </div>
       <div class="modal-body">
-          <form>
+          <form id="addNewProject">
             <div class="form-group">
               <label for="projectName">Project Name</label>
-              <input id="projectName" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              <input id="newprojectName" type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
             </div>
           </form>
       </div>
