worked on event emmiter

--- a/views/partials/pages/header_projects.handlebars
+++ b/views/partials/pages/header_projects.handlebars
@@ -18,7 +18,7 @@
         </form>
 
         <form class="navbar-form navbar-right" role="logout">
-            <span class="text-info">Welcome: {{userName}}</span>
+            <span class="text-info">Welcome: {{user.username}}</span>
             <a href="/logout" class="btn btn-info" style="margin-left: 15px;">Logout</a>
         </form>
     </div><!-- /.navbar-collapse -->
