solved issue tracker socket io issues

--- a/public/compiled/css/app.css
+++ b/public/compiled/css/app.css
@@ -1,5 +1,5 @@
-.new {
-	-webkit-border-radius: 6px;
-	        border-radius: 6px; 
+tr {
+    cursor: pointer;
 }
+
 /*# sourceMappingURL=app.css.map */
