--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -1,6 +1,8 @@
 <script src="../libs/jquery.min.js"></script>
+<script src="../libs/socket.io.js"></script>
+<script src="../libs/handlebars.js"></script>
+
 <script src="../bootstrap/js/bootstrap.min.js"></script>
-<script src="../compiled/js/app.js"></script>
 
 <script>
     var resources = new Object();
@@ -9,4 +11,8 @@
         name: "{{user.username}}",
         id: "{{user._id}}"
     };
+
+    resources.port = "{{port}}";
 </script>
+
+<script src="../compiled/js/app.js"></script>
