worked on displaying projects

--- a/views/partials/pages/projects.handlebars
+++ b/views/partials/pages/projects.handlebars
@@ -1,4 +1,4 @@
-<h1>Projects:</h1>
+<h1 class="projects-title">Projects:</h1>
 
 <section class="container projects-section">
 
@@ -20,7 +20,7 @@
                 </div>
                 <div class="form-group">
                   <label for="description">Project Description</label>
-                  <textarea name="description" id="description" class="form-control" rows="3"></textarea>
+                  <textarea name="description" id="description" placeholder="Project Description" class="form-control" rows="3"></textarea>
                 </div>
           </div>
           <div class="modal-footer">
