worked on project page

--- a/public/templates/templates.html
+++ b/public/templates/templates.html
@@ -12,7 +12,7 @@
             </thead>
             <tbody>
                 {{#each projectsList}}
-                    <tr data-project-id={{this._id}}>
+                    <tr class="project-item" data-project-id={{this._id}}>
                         <td>{{@index}}</td>
                         <td class="pr-name">{{this.name}}</td>
                         <td class="pr-description">{{this.description}}</td>
