created converter function for string time representation

--- a/public/templates/templates.html
+++ b/public/templates/templates.html
@@ -17,7 +17,7 @@
                         <td class="pr-name">{{this.name}}</td>
                         <td class="pr-description">{{this.description}}</td>
                         <td>{{this.creator.username}}</td>
-                        <td>{{this.updated}}</td>
+                        <td class="change-date-data">{{this.updated}}</td>
                         <td><button class="project-edit btn btn-info">Edit</button></td>
                         <td><button class="project-delete btn btn-danger">Delete</button></td>
                     </tr>
