--- a/views/partials/pages/project.handlebars
+++ b/views/partials/pages/project.handlebars
@@ -18,51 +18,56 @@
     </section>
 </section>
 
-<div id="addProjectModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="addIssueModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Add New Project</h4>
+        <h4 class="modal-title">Add New Issue</h4>
       </div>
-      <form id="addNewProject">
+      <form id="addNewIssue">
           <div class="modal-body">
                 <input type="hidden" name="creator" value="{{user.id}}">
+                <input type="hidden" name="project" value="{{project._id}}">
                 <div class="form-group">
-                  <label for="projectName">Project Name</label>
-                  <input id="newprojectName" name="name" type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                    <label for="issueName">Issue Name</label>
+                    <input id="issueName" name="name" type="text" class="form-control" placeholder="Email">
                 </div>
                 <div class="form-group">
-                  <label for="description">Project Description</label>
-                  <textarea name="description" id="description" placeholder="Project Description" class="form-control" rows="3"></textarea>
+                    <label for="description">Issue Description</label>
+                    <textarea name="description" id="description" placeholder="Issue Description" class="form-control" rows="3"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="original-estimate">Original estimate</label>
+                    <input id="original-estimate" name="originalEstimate" type="text" class="form-control" placeholder="e.g 1h 30m or 30m or 1.5h">
                 </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Create Project</button>
+            <button type="submit" class="btn btn-primary">Create Issue</button>
           </div>
       </form>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div id="editProjectModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="editIssueModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Edit Project</h4>
+        <h4 class="modal-title">Edit Issue</h4>
       </div>
-      <form id="updateProject">
+      <form id="updateIssue">
           <div class="modal-body">
                 <input id="updatee-project-id" type="hidden" name="projectId" value="">
                 <div class="form-group">
-                  <label for="projectName">Project Name</label>
-                  <input id="new-project-name" name="name" type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  <label for="projectName">Issue Name</label>
+                  <input id="new-project-name" name="name" type="text" class="form-control" placeholder="Email">
                 </div>
                 <div class="form-group">
-                  <label for="description">Project Description</label>
-                  <textarea placeholder="Project Description" name="description" id="new-description" class="form-control" rows="3"></textarea>
+                  <label for="description">Issue Description</label>
+                  <textarea placeholder="Issue Description" name="description" id="new-description" class="form-control" rows="3"></textarea>
                 </div>
           </div>
           <div class="modal-footer">
@@ -74,17 +79,17 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div id="deleteProjectModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="deleteIssueModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Delete Project</h4>
+        <h4 class="modal-title">Delete Issue</h4>
       </div>
       <form id="deleteProject">
           <input id="delete-project-id" type="hidden" name="projectId" value="">
           <div class="modal-body">
-                <p class="text text-danger">Are you sure you want to delete this project?</p>
+                <p class="text text-danger">Are you sure you want to delete this issue?</p>
                 <p class="text text-danger">All issues related to it will be destroyed</p>
           </div>
           <div class="modal-footer">
