--- a/views/partials/pages/projects.handlebars
+++ b/views/partials/pages/projects.handlebars
@@ -16,7 +16,7 @@
                 <input type="hidden" name="creator" value="{{user.id}}">
                 <div class="form-group">
                   <label for="projectName">Project Name</label>
-                  <input id="newprojectName" name="name" type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  <input id="newprojectName" name="name" type="text" class="form-control" placeholder="Email">
                 </div>
                 <div class="form-group">
                   <label for="description">Project Description</label>
@@ -44,7 +44,7 @@
                 <input id="updatee-project-id" type="hidden" name="projectId" value="">
                 <div class="form-group">
                   <label for="projectName">Project Name</label>
-                  <input id="new-project-name" name="name" type="text" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                  <input id="new-project-name" name="name" type="text" class="form-control" placeholder="Email">
                 </div>
                 <div class="form-group">
                   <label for="description">Project Description</label>
