--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -11,7 +11,7 @@
         name: "{{user.username}}",
         id: "{{user._id}}"
     };
-
+    resources.project = "{{project._id}}";
     resources.port = "{{port}}";
 </script>
 
