--- a/style/app.css
+++ b/style/app.css
@@ -10,3 +10,11 @@ tr {
 .change-date-data {
     min-width: 100px;
 }
+
+.help-block {
+    display: none;
+}
+
+.has-error .help-block {
+    display: block;
+}
