--- a/views/partials/pages/project.handlebars
+++ b/views/partials/pages/project.handlebars
@@ -37,9 +37,10 @@
                     <label for="description">Issue Description</label>
                     <textarea name="description" id="description" placeholder="Issue Description" class="form-control" rows="3"></textarea>
                 </div>
-                <div class="form-group">
+                <div class="form-group original-estimate-group">
                     <label for="original-estimate">Original estimate</label>
                     <input id="original-estimate" name="originalEstimate" type="text" class="form-control" placeholder="e.g 1h 30m or 30m or 1.5h">
+                    <p class="help-block">Please enter valid estimate</p>
                 </div>
           </div>
           <div class="modal-footer">
@@ -60,13 +61,13 @@
       </div>
       <form id="updateIssue">
           <div class="modal-body">
-                <input id="updatee-project-id" type="hidden" name="projectId" value="">
+                <input id="updatee-issue-id" type="hidden" name="projectId" value="">
                 <div class="form-group">
-                  <label for="projectName">Issue Name</label>
-                  <input id="new-project-name" name="name" type="text" class="form-control" placeholder="Email">
+                  <label for="new-issue-name">Issue Name</label>
+                  <input id="new-issue-name" name="name" type="text" class="form-control" placeholder="Email">
                 </div>
                 <div class="form-group">
-                  <label for="description">Issue Description</label>
+                  <label for="new-description">Issue Description</label>
                   <textarea placeholder="Issue Description" name="description" id="new-description" class="form-control" rows="3"></textarea>
                 </div>
           </div>
@@ -87,10 +88,10 @@
         <h4 class="modal-title">Delete Issue</h4>
       </div>
       <form id="deleteProject">
-          <input id="delete-project-id" type="hidden" name="projectId" value="">
+          <input id="delete-issue-id" type="hidden" name="projectId" value="">
           <div class="modal-body">
                 <p class="text text-danger">Are you sure you want to delete this issue?</p>
-                <p class="text text-danger">All issues related to it will be destroyed</p>
+                <p class="text text-danger">All logs and comments related to it will be destroyed</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
