--- a/public/templates/templates.html
+++ b/public/templates/templates.html
@@ -39,7 +39,7 @@
             </thead>
             <tbody>
                 {{#each issuesList}}
-                    <tr class="project-item" data-issue-id={{this._id}}>
+                    <tr class="issue-item" data-issue-id={{this._id}}>
                         <td>{{this._id}}</td>
                         <td class="issue-name">{{this.name}}</td>
                         <td class="issue-description">{{this.description}}</td>
