--- a/style/app.css
+++ b/style/app.css
@@ -18,3 +18,13 @@ tr {
 .has-error .help-block {
     display: block;
 }
+
+.nav-tabs .nav.active a {
+    background-color: #2780e3;
+    color: white;
+}
+
+.nav-tabs .nav.active a:focus {
+    background-color: #2780e3;
+    color: white;
+}
