--- a/views/partials/pages/issue.handlebars
+++ b/views/partials/pages/issue.handlebars
@@ -1,14 +1,14 @@
-<h1 class="projects-title">Project({{project.name}}):</h1>
+<h1 class="projects-title">Issue({{issue.name}}):</h1>
 
 <section class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h3 class="project-name-title">Project id: {{project._id}}</h3>
+            <h3 class="project-name-title">Issue id: {{issue._id}}</h3>
             <div class="well">
                 <h4 class="text-center">Description:</h4>
-                <p class="text-center">{{project.description}}</p>
-                <p>Updated at: {{project.updated}}</p>
-                <p>Created by: {{project.creator.username}}</p>
+                <p class="text-center">{{issue.description}}</p>
+                <p>Updated at: {{issue.updated}}</p>
+                <p>Created by: {{issue.creator.username}}</p>
             </div>
         </div>
     </div>
@@ -17,6 +17,45 @@
 
     </section>
 </section>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-9">
+                <ul class="nav nav-tabs">
+                    <li class="nav active"><a href="#comments-section" data-toggle="tab">Comments</a></li>
+                    <li class="nav"><a href="#logs-section" data-toggle="tab">Work Log</a></li>
+                </ul>
+
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div class="tab-pane fade in active panel panel-primary" id="comments-section">
+                        <div class="panel-body">
+                            Basic panel example
+                        </div>
+                    </div>
+                    <div class="tab-pane fade panel panel-primary" id="logs-section">
+                        <div class="panel-body">
+                            Basic panel example2
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Time tracking</div>
+                <div class="panel-body">
+                    <h4>Estimated: 6h</h4>
+                    <h4>Logged: 3h</h4>
+                    <h4>Progress:</h4>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                        <span class="sr-only">40% Complete (success)</span>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="addIssueModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
@@ -28,7 +67,7 @@
       <form id="addNewIssue">
           <div class="modal-body">
                 <input type="hidden" name="creator" value="{{user.id}}">
-                <input type="hidden" name="project" value="{{project._id}}">
+                <input type="hidden" name="project" value="{{issue.project}}">
                 <div class="form-group">
                     <label for="issueName">Issue Name</label>
                     <input id="issueName" name="name" type="text" class="form-control" placeholder="Email">
@@ -62,7 +101,7 @@
       <form id="updateIssue">
           <div class="modal-body">
                 <input id="updatee-issue-id" type="hidden" name="issueId" value="">
-                <input type="hidden" name="project" value="{{project._id}}">
+                <input type="hidden" name="project" value="{{issue.project}}">
                 <div class="form-group">
                   <label for="new-issue-name">Issue Name</label>
                   <input id="new-issue-name" name="name" type="text" class="form-control" placeholder="Email">
@@ -90,7 +129,7 @@
       </div>
       <form id="deleteIssue">
           <input id="delete-issue-id" type="hidden" name="issuetId" value="">
-          <input type="hidden" name="project" value="{{project._id}}">
+          <input type="hidden" name="project" value="{{issue.project}}">
           <div class="modal-body">
                 <p class="text text-danger">Are you sure you want to delete this issue?</p>
                 <p class="text text-danger">All logs and comments related to it will be destroyed</p>
