--- a/views/partials/pages/projects.handlebars
+++ b/views/partials/pages/projects.handlebars
@@ -75,7 +75,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-danger">Apply Changes</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
           </div>
       </form>
     </div><!-- /.modal-content -->
