--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -1,8 +1,11 @@
 <script src="../libs/jquery.min.js"></script>
 <script src="../libs/socket.io.js"></script>
 <script src="../libs/handlebars.js"></script>
-
+<script src="../libs/moment.js"></script>
 <script src="../bootstrap/js/bootstrap.min.js"></script>
+<script src="../libs/bootstrap-datetimepicker.min.js"></script>
+
+
 
 <script>
     var resources = new Object();
