--- a/style/app.css
+++ b/style/app.css
@@ -28,3 +28,22 @@ tr {
     background-color: #2780e3;
     color: white;
 }
+
+.new-comment,
+.new-worklog {
+    margin: 0 auto 5px auto;
+    display: block;
+}
+
+.glyphicon-time {
+    cursor: pointer;
+    display: block;
+    pointer-events: auto;
+}
+
+.glyphicon-time::before {
+    line-height: 25px;
+    display: inline-block;
+    right: 6px;
+    position: relative;
+}
