--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -15,6 +15,7 @@
         id: "{{user._id}}"
     };
     resources.project = "{{project._id}}";
+    resources.issue = "{{issue._id}}";
     resources.port = "{{port}}";
 </script>
 
