--- a/views/partials/pages/issue.handlebars
+++ b/views/partials/pages/issue.handlebars
@@ -1,6 +1,6 @@
 <h1 class="projects-title">Issue({{issue.name}}):</h1>
 
-<section class="container">
+<section class="container-fluid">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h3 class="project-name-title">Issue id: {{issue._id}}</h3>
