--- a/views/partials/pages/project.handlebars
+++ b/views/partials/pages/project.handlebars
@@ -1,6 +1,6 @@
 <h1 class="projects-title">Project({{project.name}}):</h1>
 
-<section class="container">
+<section class="container-fluid">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <h3 class="project-name-title">Project id: {{project._id}}</h3>
