--- a/views/partials/pages/projects.handlebars
+++ b/views/partials/pages/projects.handlebars
@@ -1,83 +1,85 @@
-<h1 class="projects-title">Projects:</h1>
+<div class="container-fluid">
+    <h1 class="projects-title">Projects:</h1>
 
-<section class="container projects-section">
+    <section class="projects-section">
 
-</section>
+    </section>
 
-<div id="addProjectModal" class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Add New Project</h4>
-      </div>
-      <form id="addNewProject">
-          <div class="modal-body">
-                <input type="hidden" name="creator" value="{{user.id}}">
-                <div class="form-group">
-                  <label for="projectName">Project Name</label>
-                  <input id="newprojectName" name="name" type="text" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <label for="description">Project Description</label>
-                  <textarea name="description" id="description" placeholder="Project Description" class="form-control" rows="3"></textarea>
-                </div>
+    <div id="addProjectModal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Add New Project</h4>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Create Project</button>
-          </div>
-      </form>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+          <form id="addNewProject">
+              <div class="modal-body">
+                    <input type="hidden" name="creator" value="{{user.id}}">
+                    <div class="form-group">
+                      <label for="projectName">Project Name</label>
+                      <input id="newprojectName" name="name" type="text" class="form-control" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                      <label for="description">Project Description</label>
+                      <textarea name="description" id="description" placeholder="Project Description" class="form-control" rows="3"></textarea>
+                    </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Create Project</button>
+              </div>
+          </form>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
-<div id="editProjectModal" class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Edit Project</h4>
-      </div>
-      <form id="updateProject">
-          <div class="modal-body">
-                <input id="updatee-project-id" type="hidden" name="projectId" value="">
-                <div class="form-group">
-                  <label for="projectName">Project Name</label>
-                  <input id="new-project-name" name="name" type="text" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <label for="description">Project Description</label>
-                  <textarea placeholder="Project Description" name="description" id="new-description" class="form-control" rows="3"></textarea>
-                </div>
+    <div id="editProjectModal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Edit Project</h4>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Apply Changes</button>
-          </div>
-      </form>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+          <form id="updateProject">
+              <div class="modal-body">
+                    <input id="updatee-project-id" type="hidden" name="projectId" value="">
+                    <div class="form-group">
+                      <label for="projectName">Project Name</label>
+                      <input id="new-project-name" name="name" type="text" class="form-control" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                      <label for="description">Project Description</label>
+                      <textarea placeholder="Project Description" name="description" id="new-description" class="form-control" rows="3"></textarea>
+                    </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Apply Changes</button>
+              </div>
+          </form>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
-<div id="deleteProjectModal" class="modal fade" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Delete Project</h4>
-      </div>
-      <form id="deleteProject">
-          <input id="delete-project-id" type="hidden" name="projectId" value="">
-          <div class="modal-body">
-                <p class="text text-danger">Are you sure you want to delete this project?</p>
-                <p class="text text-danger">All issues related to it will be destroyed</p>
+    <div id="deleteProjectModal" class="modal fade" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Delete Project</h4>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-danger">Delete</button>
-          </div>
-      </form>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+          <form id="deleteProject">
+              <input id="delete-project-id" type="hidden" name="projectId" value="">
+              <div class="modal-body">
+                    <p class="text text-danger">Are you sure you want to delete this project?</p>
+                    <p class="text text-danger">All issues related to it will be destroyed</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </div>
+          </form>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+</div>
