finished work on comments section

--- a/public/compiled/css/app.css
+++ b/public/compiled/css/app.css
@@ -52,4 +52,13 @@ tr {
     color: white;
 }
 
+.comment-controlls {
+    float: right;
+}
+
+.comment-controlls span {
+    cursor: pointer;
+    margin-left: 5px;
+}
+
 /*# sourceMappingURL=app.css.map */
