--- a/style/app.css
+++ b/style/app.css
@@ -51,3 +51,12 @@ tr {
 .comment-item header {
     color: white;
 }
+
+.comment-controlls {
+    float: right;
+}
+
+.comment-controlls span {
+    cursor: pointer;
+    margin-left: 5px;
+}
