--- a/views/partials/pages/issue.handlebars
+++ b/views/partials/pages/issue.handlebars
@@ -125,52 +125,45 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div id="editIssueModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="editCommentModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Edit Issue</h4>
+        <h4 class="modal-title">Edit Comment</h4>
       </div>
-      <form id="updateIssue">
+      <form id="updateComment">
           <div class="modal-body">
-                <input id="updatee-issue-id" type="hidden" name="issueId" value="">
-                <input type="hidden" name="project" value="{{issue.project}}">
-                <div class="form-group">
-                  <label for="new-issue-name">Issue Name</label>
-                  <input id="new-issue-name" name="name" type="text" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <label for="new-description">Issue Description</label>
-                  <textarea placeholder="Issue Description" name="description" id="new-description" class="form-control" rows="3"></textarea>
-                </div>
+              <input type="hidden" id="edit-comment-id" name="commentId" value="">
+              <div class="form-group">
+                  <label for="comment-text">Comment text</label>
+                  <textarea name="text" id="comment-text" placeholder="Please type your comment here" class="form-control" rows="3"></textarea>
+              </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Edit Issue</button>
+            <button type="submit" class="btn btn-primary">Edit Comment</button>
           </div>
       </form>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div id="deleteIssueModal" class="modal fade" tabindex="-1" role="dialog">
+<div id="deleteCommentModal" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Delete Issue</h4>
+        <h4 class="modal-title">Delete Comment</h4>
       </div>
-      <form id="deleteIssue">
-          <input id="delete-issue-id" type="hidden" name="issuetId" value="">
-          <input type="hidden" name="project" value="{{issue.project}}">
+      <form id="deleteComment">
+          <input id="delete-comment-id" type="hidden" name="commentId" value="">
           <div class="modal-body">
-                <p class="text text-danger">Are you sure you want to delete this issue?</p>
-                <p class="text text-danger">All logs and comments related to it will be destroyed</p>
+                <p class="text text-danger">Are you sure you want to delete this comment?</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-danger">Delete Issue</button>
+            <button type="submit" class="btn btn-danger">Delete Comment</button>
           </div>
       </form>
     </div><!-- /.modal-content -->
