--- a/public/templates/templates.html
+++ b/public/templates/templates.html
@@ -72,23 +72,23 @@
         {{/each}}
     </script>
 
-    <script id="#work-logs-template" type="text/x-handlebars-template">
+    <script id="work-logs-template" type="text/x-handlebars-template">
         {{#each workLogsList}}
-            <article class="comment-item panel panel-primary" data-comment-id={{this._id}}>
+            <article class="work-log-item panel panel-primary" data-work-log-id={{this._id}}>
                 <header class="panel-heading">
-                    <span class="comment-info">{{this.creator.username}} added a worklog - {{this.dateStarted}}</span>
-                    <section class="comment-controlls">
+                    <span class="work-log-info">{{this.creator.username}} added a worklog - {{this.dateStarted}}</span>
+                    <section class="work-log-controlls">
                         {{#if this.isWorkLogOwner}}
-                            <span class="edit-comment glyphicon glyphicon-pencil"></span>
-                            <span class="delete-comment glyphicon glyphicon-trash"></span>
+                            <span class="edit-work-log glyphicon glyphicon-pencil"></span>
+                            <span class="delete-work-log glyphicon glyphicon-trash"></span>
                         {{/if}}
                     </section>
                 </header>
                 <section class="panel-body">
-                    <p class="time-spent">
-                        {{this.text}}
+                    <p class="time-spent alert alert-info">
+                        {{this.timeSpent}}
                     </p>
-                    <p class="worklog-text">
+                    <p class="worklog-text well">
                         {{this.text}}
                     </p>
                 </section>
