--- a/views/partials/pages/issue.handlebars
+++ b/views/partials/pages/issue.handlebars
@@ -169,3 +169,48 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<div id="editWorklogModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Edit Worklog</h4>
+      </div>
+      <form id="updateWorklog">
+          <div class="modal-body">
+              <input type="hidden" id="edit-work-log-id" name="commentId" value="">
+              <div class="form-group">
+                  <label for="comment-text">Worklog text</label>
+                  <textarea name="text" id="edit-work-log-text" placeholder="Please type your comment here" class="form-control" rows="3"></textarea>
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Edit Worklog</button>
+          </div>
+      </form>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<div id="deleteWorklogModal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Delete Worklog</h4>
+      </div>
+      <form id="deleteWorklog">
+          <input id="delete-work-log-id" type="hidden" name="commentId" value="">
+          <div class="modal-body">
+                <p class="text text-danger">Are you sure you want to delete this worklog?</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-danger">Delete Worklog</button>
+          </div>
+      </form>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
