Finished work on worklogs functionality

--- a/public/templates/templates.html
+++ b/public/templates/templates.html
@@ -85,7 +85,7 @@
                     </section>
                 </header>
                 <section class="panel-body">
-                    <p class="time-spent alert alert-info">
+                    <p class="time-spent alert alert-info" data-minutes="{{this.timeSpentMinutes}}">
                         {{this.timeSpent}}
                     </p>
                     <p class="worklog-text well">
