--- a/views/partials/pages/issue.handlebars
+++ b/views/partials/pages/issue.handlebars
@@ -45,8 +45,13 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">Time tracking</div>
                 <div class="panel-body">
-                    <h4>Estimated: 6h</h4>
-                    <h4>Logged: 3h</h4>
+                    <dl>
+                        <dt>Estimated: </dt>
+                        <dd class="issue-estimated">6h</dd>
+                        <dt>Logged: </dt>
+                        <dd class="issue-logged">3h</dd>
+                    </dl>
+
                     <h4>Progress:</h4>
                     <div class="progress">
                       <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
